testdata/ttcn3-conformance-tests/ATS/json/06_using_ttcn3_as_json_schema/0604_mapping_of_json_values/060401_json_numbers/Neg_0600401_json_numbers_003/Neg_0600401_json_numbers_003.ttcn
/***************************************************
 ** @author   STF 572
 ** @version  0.0.1
 ** @purpose  11:6.4.1, Verify that -infinity can not be assigned to a JSON.Number.
 ** @verdict  pass reject
 ***************************************************/
/*
 * JSON numbers:
 * 6.4.1: No special values (as –infinity, infinity or NaN) are allowed.
 * */

module Neg_0600401_json_numbers_003 {

    import from JSON all;

    template JSON.Number m_msg := -infinity;    // error: -infinity is not alloewed.

}
